--- a/index.html
+++ b/index.html
@@ -25,7 +25,28 @@
 				<li class="nav-button"><a class="linkcolor" target="_blank" href="https://www.dropbox.com/s/n6f1y164jnygwqy/Iordanis%20Chatzievgeniadis.pdf?dl=0">CV</a></li>
 			</ul>
 		</div>
-		
+		<div id="home" class="header">
+	<div class="mobile-nav-box">
+		<div id="nav-icon3">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+</button>
+		<div id="demo" class="hbox" style="display: none;">
+			<ul class="stack">
+				<li><a class="linkcolora" href="#home">Home</a></li>
+				<li><a class="linkcolora" href="#skills">Skills</a></li>
+				<li><a class="linkcolora w3-bar-item w3-button" href="#portfolio">Portfolio</a></li>
+				<li><a class="linkcolora w3-bar-item w3-button" href="#about">About Me</a></li>
+				<li><a class="linkcolora w3-bar-item w3-button" href="#contact">Get In Touch</a></li>
+				<li><a class="linkcolora w3-bar-item w3-button" target="_blank" href="https://www.dropbox.com/s/0rdplwmk3mksk80/CV.pdf?dl=0">CV</a>
+			</li>
+		</ul>
+	</div>
+</div>
+</div>
 <div class="header">
 	<img class="header-image img-responsive" src="https://raw.githubusercontent.com/iordanisch/ch.iordanis/gh-pages/borrower.png" alt="">
 </div>
@@ -279,6 +300,41 @@ display: flex;
 	text-align: center;
 	margin: 70px 0px 70px 0px;
 }
+
+/*Mobile*/
+
+.header {
+    height: 300px;
+    background: rgb(101,181,198);
+    background: linear-gradient(90deg, rgba(101,181,198,1) 0%, rgba(121,219,240,1) 100%);
+    position: relative;
+    margin-top: -72px;
+}
+
+.header-image {
+    position: absolute;
+    margin: auto;
+    top: -145px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-height: 400px;
+}
+
+.double-cont, .research-main{
+	display: block;
+}
+.overview, .role, .goal, .research-iner{
+	width: 100%;
+	margin-bottom: 50px;
+}
+
+.fas{
+	font-size: 60px !important;
+	color: #6ec6d8!important;
+}
+
+
 
 /*--------------Pasted CSS------------------*/
 
