--- a/index.html
+++ b/index.html
@@ -280,7 +280,10 @@ li {
 .skills {
     margin-top: 110px;
 }
-
+.img-responsive {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 .mob-but-men{
   display: none;
 }
