--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	<div class="thirdblock">
 	<h1><strong>The process</strong></h1>
 	<p>The process at LendingCrowd was based on the Double Diamond Theory and Lean UX process. I  aimed to incorporate the key phases of Discovery, Definition, Ideation and Implementation in all of their projects. </p>
-	<img class="img-responsive" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/double-diamond.jpg?raw=true" alt="double-diamond">
+	<img class="img-responsive " src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/double-diamond.jpg?raw=true" alt="double-diamond">
 	</div>
 </div>
 <div class="fullwidthboxone">
@@ -131,7 +131,7 @@
 	<div class="thirdblock">
 	<h1><strong>Gathering insights</strong></h1>
 	<p>After collecting the recordings from the user interviews, I conducted affinity mapping with the project manager to synthesize the pains identified. We grouped these problems under common themes and features in the platform.</p>
-	<img class="img-responsive" class="image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/Sticky%20Notes.jpeg?raw=true" alt="sticky-notes">
+	<img class="img-responsive image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/Sticky%20Notes.jpeg?raw=true" alt="sticky-notes">
 	<p>I relied on a data-driven approach known as the severity framework to inform my process and list usability issues in order of priority. The framework helps to identify the severity score of a usability issue based on the following three variables:
 </p>
 
@@ -176,7 +176,7 @@
     </ul>
 <p>
 I quickly mocked up some basic wireframes to gather feedback from Product, Engineering and the users on the overall layout and structure of the wizard form. This involved establishing a standardised visual hierarchy and layout for the future wizard component. </p>
-<img class="img-responsive" class="wire-image image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/wireframe.jpg?raw=true" alt="wireframe">
+<img class="img-responsive wire-image image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/wireframe.jpg?raw=true" alt="wireframe">
 </div>
 </div>
 </div>
@@ -267,7 +267,6 @@ a:hover{
 ul {
     margin-top: 0;
     margin-bottom: 10px;
-   /* display: grid;*/
     }
 li {
     display: inline;
@@ -279,10 +278,6 @@ li {
 
 .skills {
     margin-top: 110px;
-}
-.img-responsive {
-    margin-top: 50px;
-    margin-bottom: 50px;
 }
 .mob-but-men{
   display: none;
