--- a/index.html
+++ b/index.html
@@ -370,9 +370,10 @@ display: flex;
   transition: 1s;
 }
 .buttons {
-  margin-top:40px;
+  margin-top:41px;
   position: relative;
   z-index: 100;
+  margin-left: 1px;
   }
 
  .footerbox {
