--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@ display: flex;
   transition: 1s;
 }
 .buttons {
-  margin-top:41px;
+  margin-top:41px !important;
   position: relative;
   z-index: 100;
-  margin-left: 1px;
+  margin-left: 1px !important;
   }
 
  .footerbox {
