--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ During the session, I observed how they interacted with the prototype. The usabi
 <div class="footer text-center">
 <div class="container">
 <div class="footerbox">
-<img class="logofooter" src="https://drive.google.com/uc?export=download&id=0B8XffBu06MTRbVJ0d1F4Tk02X00">
+<img class="logofooter" src="https://raw.githubusercontent.com/iordanisch/ch.iordanis/gh-pages/Logo-Footer.png">
 <p>Designed by Iordanis Chatzievgeniadis
 </p>
 <p>-- Edinburgh 2017 --</p>
