--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 	<div class="overview">
 		<i class="fa fa-list-alt" aria-hidden="true"></i>
 		<h2><strong>Overview</strong></h2>
-		<p>LendingCrowd began a redesign of its entire platform with the vision of becoming the biggest P2P bank in UK. </p>
+		<p>LendingCrowd began a redesign of its entire platform with the vision of becoming the biggest P2P bank in the UK. </p>
 	</div>
 	<div class="role">
 		<i class="fas fa-users"></i>
 		<h2><strong>The Role</strong></h2>
-		<p>Product Designer – Product Lead.User Research, Interaction, Visual design, Prototyping & Testing
+		<p>Product Designer – Product Lead. User Research, Interaction, Visual Design, Prototyping & Testing
 	Dec 2018 – Nov 2020.</p>
 	</div>
 	<div class="goal">
@@ -80,9 +80,9 @@
 <div class="back-box">
 <p>LendingCrowd is a fast-growing fintech lending platform. They fund ambitions and enable British businesses to grow by connecting them with lenders seeking a better return on their money. Learn more about  <strong><a href="www.lendingcrowd.com/" target="_blank">LendingCrowd</a></strong>.</p>
 <br>
-<p>I joined LendingCrowd the first days of December 2018 as their Product Designer – Product Lead. While being a part of the tech team I worked with front end – back end developers, project manager and various stakeholders to support design across every aspect of their business and I was responsible leading UX and UI across key parts of the application side of the platform.</p>
+<p>I joined LendingCrowd the first days of December 2018 as their Product Designer – Product Lead. While being a part of the tech team I worked with front end – back end developers, project manager and various stakeholders to support design across every aspect of their business and I was responsible for leading UX and UI across key parts of the application side of the platform.</p>
 <br>
-<p>Some aspects that I grew tremendously during my time as their Product Designer and some key achievements of which are listed below:</p>
+<p>Some skills that I grew tremendously during my time as their Product Designer and some key achievements of which are listed below:</p>
 <br>
 <ul>
 	<li class="no-in"><strong>• Implemented a design process.</strong> This has helped the team establish more structure to how we conduct the work and allow other teams to gain visibility across the upcoming sprints.</li>
