--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 <br>
 <p>I joined LendingCrowd the first days of December 2018 as their Product Designer – Product Lead. While being a part of the tech team I worked with front end – back end developers, project manager and various stakeholders to support design across every aspect of their business and I was responsible for leading UX and UI across key parts of the application side of the platform.</p>
 <br>
-<p>Some skills that I grew tremendously during my time as their Product Designer and some key achievements of which are listed below:</p>
+<p>I developed skills which grew tremendously during my time as their Product Designer, some of my key achievements are listed below:</p>
 <br>
 <ul>
 	<li class="no-in"><strong>• Implemented a design process.</strong> This has helped the team establish more structure to how we conduct the work and allow other teams to gain visibility across the upcoming sprints.</li>
-   <li class="no-in"><strong>• Improved usability across the platform.</strong> No usability tests were conducted by the external consultancy before dev handoff. Since I joined the tech team, we have been actively working towards conducting UX research and usability testing on all projects. </li>
+   <li class="no-in"><strong>• Improved usability across the platform.</strong> No usability tests were conducted by the external consultancy before developer handoff. Since I joined the tech team, we have been actively working towards conducting UX research and usability testing on all projects. </li>
    <br>
    <li class="no-in"><strong>• Establishing a design kit.</strong> This has helped to maintain consistency in the look and feel across different parts of the platform.</li>
    <br>
@@ -107,9 +107,9 @@
 <div class="container">
 <div class="secondblock">
 <h1><strong>Understanding the problem</strong></h1>
-<p>Before LendingCrowd even hired a product designer, a release of the new platform had been implemented based on blue-sky concepts executed by an external consultancy. These mockups were created without any usability testing and had little consideration for the technical and product limitations on the scope of work. </p>
+<p>Before LendingCrowd even hired a product designer, their platform was designed by a third party. This was created without any usability testing and had little consideration for the technical and product limitations on the scope of work. </p>
 <br>
-<p>I conducted research interviews with their primary users (account managers) to uncover any pain points that they were experiencing with the beta release. <strong>My Research Encompassed:</strong> </p>
+<p>I conducted research interviews with their primary users (product managers) to uncover any pain points that they were experiencing with the beta release. <strong>My research encompassed:</strong> </p>
 <div class="research-main">
 	<div class="research-iner">
 		<i class="fas fa-users re-icon"></i>
@@ -130,7 +130,7 @@
 <div class="container">
 	<div class="thirdblock">
 	<h1><strong>Gathering insights</strong></h1>
-	<p>After collecting the recordings from the user interviews, I conducted affinity mapping with the project manager to synthesize the pains identified. We grouped these problems under common themes and features in the platform.</p>
+	<p>After collecting the recordings from the user interviews, I conducted affinity mapping with the project manager to identify the challenges the users encountered while using the platform. We grouped these problems under common themes and features in the platform.</p>
 	<img class="img-responsive image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/Sticky%20Notes.jpeg?raw=true" alt="sticky-notes">
 	<p>I relied on a data-driven approach known as the severity framework to inform my process and list usability issues in order of priority. The framework helps to identify the severity score of a usability issue based on the following three variables:
 </p>
@@ -147,19 +147,19 @@
 <div class="container">
 <div class="secondblock">
 <h1><strong>Prioritisation of issues</strong></h1>
-<p>I took the extra step of categorizing these problems into broader Epics to provide the Product manager and engineers with visibility into the key areas of the platform that needed to be addressed from a usability standpoint. This not only helped to prioritize usability issues in order of need but also helped to shape the product road-map for the quarter. </p>
+<p>I took the extra step of categorizing these problems into broader Epics to provide the Product manager and engineers with visibility into the key areas of the platform that needed to be addressed from a usability standpoint. This not only helped to prioritize usability issues in order of need but also helped to shape the product road-map. </p>
 </div>
 </div>
 </div>
 <div class="container">
 	<div class="thirdblock">
 	<h1><strong>Narrowing down the scope of work</strong></h1>
-	<p>Based on the user interviews conducted with 7 users on the existing , we found the following key issues:
+	<p>Based on the user interviews conducted with 7 users on the existing platform, we found the following key issues:
    </p>
 <ul>
 	<li class="no-in">•<strong> 57%</strong> of users felt that the process of using the platform (requesting funds) was arduous.</li>
-	<li class="no-in">•<strong> 29%</strong> were frustrated that the Next button was disabled so they could not identify which were missing required fields.</li>
-	<li class="no-in">•<strong> 29%</strong> of users found that it was easy to miss field inputs due to a lack of visual hierarchy.</li>
+	<li class="no-in">•<strong> 29%</strong> of users were frustrated by the excessive amount of information they required to provide and often repeat. </li>
+	<li class="no-in">•<strong> 14%</strong> of users found that it was easy to miss field inputs due to a lack of visual hierarchy.</li>
     </ul>
 	</div>
 </div>
@@ -167,15 +167,16 @@
 <div class="container">
 <div class="secondblock">
 <h1><strong>Wireframing the solution</strong></h1>
-<p>Based on the above problems identified, I worked towards addressing these pains by coming up with potential solutions:</p>
+<p>Based on the above problems identified, I worked towards addressing these difficulties by coming up with potential solutions:</p>
 <ul>
 	<li class="no-in">• Reducing the number of steps to minimize time to completion.</li>
-	<li class="no-in">• Surfacing mandatory fields and enabling the Next button to show error validation.</li>
-	<li class="no-in">• Establishing clearer visual form hierarchy by grouping related fields </li>
-	<li class="no-in">• The lack of consistent UI elements also meant that I had to come up with a standardized styling and UIpattern for future wizards.</li>    
+	<li class="no-in">• Implementing a system whereby user information was pre-populated, thus avoiding the need for repetition of information.</li>
+	<li class="no-in">• Using APIs from a number of sources in order to allow information to be populated automatically, e.g. from a postcode.</li>
+	<li class="no-in">• Establishing clearer visual form hierarchy by grouping related fields. </li>
+	<li class="no-in">• The lack of consistent UI elements also meant that I had to come up with a standardized styling and UI pattern for future use.</li>    
     </ul>
 <p>
-I quickly mocked up some basic wireframes to gather feedback from Product, Engineering and the users on the overall layout and structure of the wizard form. This involved establishing a standardised visual hierarchy and layout for the future wizard component. </p>
+I quickly mocked up some basic wireframes to gather feedback from various stakeholders and the users on the overall layout and structure of the platform. This involved establishing a standardised visual hierarchy and layout for the future components. </p>
 <img class="img-responsive wire-image image-top-margin" src="https://github.com/iordanisch/ch.iordanis/blob/gh-pages/wireframe.jpg?raw=true" alt="wireframe">
 </div>
 </div>
@@ -183,13 +184,12 @@ I quickly mocked up some basic wireframes to gather feedback from Product, Engin
 <div class="container">
 	<div class="thirdblock">
 			<h1><strong>Validating the designs</strong></h1>
-	<p>I conducted usability testing sessions with users to validate whether the new designs would solve their problems. I wrote a script including a scenario asking the user to complete the journey by borrowing money using both web browser and mobile devices.
-During the session, I observed how they interacted with the prototype. The usability session revealed that it was less arduous to get a new loan due to the new UI and UX amends that were introduced. It was easier for the user to identify which forms they had to fill and the automation UX amends made the process faster and safer. 
+	<p>I conducted usability testing sessions with users to validate whether the new designs would solve their problems. I wrote a script including a scenario asking the user to complete the journey by borrowing money using both web browser and mobile devices.During the session, I observed how they interacted with the prototype. The usability session revealed that it was less arduous to secure a new loan due to the new UI and UX amends that were introduced. It was easier for the user to identify which forms they had to fill in and the automation UX amends made the process faster and safer. 
 </p>
 	</div>
 	<div class="thirdblock">
 	<h1><strong>Developing the designs</strong></h1>
-	<p>I created my high fidelity mockups in Sketch and then imported them into Invision to allow the engineers to inspect the file and export the HTML and CSS code. 
+	<p>I created my high fidelity mockups in Sketch and then imported them into Invision and Zeplin to allow the engineers to inspect the file and export the HTML and CSS code. 
 </p><br>
 <p>I worked very closely with the Front End team to spec out any missing interactions that were not covered in the high fidelity mockups. I conducted a UX review of each front-end ticket that was implemented to ensure it was aligned with the designs before it went live. 
 </p>
@@ -198,15 +198,15 @@ During the session, I observed how they interacted with the prototype. The usabi
 <div class="fullwidthboxone">
 <div class="container">
 <div class="secondblock">
-<h1><strong>Results and takeaways</strong></h1>
-<p>Since the implementation of the new rebuild of the Borrower side of the platform, there was a significant decrease in the number of complaints lodged through the service desk. Additionally, I received positive feedback from users about the simplified user journey, saving them a large proportion of their time.
+<h1><strong>Results and take-aways</strong></h1>
+<p>Since the implementation of the new rebuild of the Borrower side of the platform, there was a significant decrease in the number of complaints lodged through the service desk. Additionally, I received positive feedback from users about the simplified user journey, saving them a large amount of their time.
 </p>
 <br>
-<p>Some key takeaways from this project are: </p>
+<p>Some key take-aways from this project are: </p>
 <ul>
 	<li class="no-in"><strong>• Create a strategic plan to launch an MVP.</strong> This helps deal with out-of-scope requests that could potentially derail the project and helps deliver a quality product in time.</li>
-	<li class="no-in"><strong>• User testing doesn't end after development.</strong> Design is a constant iteration of improving the experience for the end user. Always find ways to collect and listen to your user's feedback.</li>
-	<li class="no-in"><strong>• Involve engineering upfront.</strong> This helps to reduce any rework later on as an understanding of the technical limitations upfront will help to inform your design strategy. </li>
+	<li class="no-in"><strong>• User testing does not end after development.</strong> Design is a constant iteration of improving the experience for the end user. Always find ways to collect and listen to your user's feedback.</li>
+	<li class="no-in"><strong>• Involve engineering upfront.</strong> This helps to reduce any rework later on because we have an understanding of any technical limitations early in the process. </li>
 	<li class="no-in"><strong>• Finance awards.</strong>While I was part of LendingCrowd I significantly contributed to their success on to getting a variety of awards such as Best P2P Business Lender, Chamber Business Awards 2019, British Business Awards 2019 and during 2020 named among the 50 fastest-growing technology companies in the UK for the second year running.</li>    
     </ul>
 </div>
